--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Link to your logo file for the favicon -->
+    <link rel="icon" type="image/svg+xml" href="https://openclipart.org/image/800px/291624" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrendSphere</title>
   </head>
